--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #8800ff;
   text-decoration: inherit;
 }
 a:hover {
@@ -27,7 +27,7 @@ a:hover {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.25rem;
   line-height: 1.1;
 }
 
