--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-button{
-    border: 2px solid black;
-}
