--- a/src/components/WorkSpace/workSpace.module.css
+++ b/src/components/WorkSpace/workSpace.module.css
@@ -1,7 +1,39 @@
-.calendar{
-    width: 100vw;
-    height: 95vh;
-    margin: auto;
-    position: absolute;
-    background-color: white;
+textarea {
+    field-sizing: content;
+}
+
+.open {
+    animation: open 700ms ease-out;
+}
+
+.close {
+    animation: close 500ms ease;
+}
+
+@keyframes open {
+    10% {
+        opacity: 0;
+        transform: scale(0);
+    }
+    50% {
+        opacity: 1;
+        transform: scale(1.2);
+    }
+    75% {
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes close {
+    from {
+        opacity: 1;
+        transform: scale(1);
+    }
+    to {
+        opacity: 0;
+        transform: scale(0);
+    }
 }
