--- a/src/components/WorkSpace/workSpace.module.css
+++ b/src/components/WorkSpace/workSpace.module.css
@@ -3,26 +3,20 @@ textarea {
 }
 
 .open {
-    animation: open 700ms ease-out;
+    animation: open 350ms ease-out;
 }
 
 .close {
-    animation: close 500ms ease;
+    animation: close 300ms ease;
 }
 
 @keyframes open {
-    10% {
+    from {
         opacity: 0;
         transform: scale(0);
     }
-    50% {
+    to {
         opacity: 1;
-        transform: scale(1.2);
-    }
-    75% {
-        transform: scale(0.8);
-    }
-    100% {
         transform: scale(1);
     }
 }
